--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "gray-matter": "^4.0.3",
     "next": "13.4.4",
+    "path": "^0.12.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
