--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "resend": "^0.15.3",
     "tailwindcss": "3.3.2"
   }
 }
