--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
